# fast_api_python_back_end

./: README.md  pyproject.toml  requirements.txt
routes/: auth_routes.py  order_routes.py
