[tool.poetry]
name = "api-back-end"
version = "0.1.0"
description = "API de Backend com FastAPI e SQLAlchemy"
authors = ["Natan <natanmaia2005@gmail.com>"]
readme = "README.md"
packages = [{include = "main.py"}]
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "0.135.3"
uvicorn = {extras = ["standard"], version = "0.42.0"}
sqlalchemy = "2.0.48"
pydantic = "2.12.5"
python-dotenv = "1.2.2"
python-jose = {extras = ["cryptography"], version = "3.5.0"}
passlib = {extras = ["bcrypt"], version = "1.7.4"}
bcrypt = "5.0.0"
python-multipart = "0.0.22"

[tool.poetry.group.dev.dependencies]
ruff = "0.15.8"
taskipy = "1.14.1"
pytest = "^8.0.0"

[tool.ruff]
target-version = "py313"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.taskipy.tasks]
dev = "uvicorn main:app --reload"
lint = "ruff check ."
format = "ruff format ."
test = "pytest -v"
post_lint = "task format"

[tool.pytest.ini_options]
pythonpath = "."
testpaths = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"